--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
-plugins {
-	id 'fabric-loom' version '0.5-SNAPSHOT'
+plugins {id 'fabric-loom' version '0.12-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -18,15 +17,19 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	modApi("me.shedaniel.cloth:config-2:4.8.3") {
+	modApi("me.shedaniel.cloth:cloth-config-fabric:4.17.101") {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
-    modApi("me.sargunvohra.mcmods:autoconfig1u:3.3.1") {
-        exclude(group: "net.fabricmc.fabric-api")
-    }
-
+    modApi ("com.terraformersmc:modmenu:1.16.23")
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
+}
+
+repositories {
+    maven { url = 'https://maven.fabricmc.net/' }
+    maven { url = 'https://maven.shedaniel.me/' }
+    maven { url "https://maven.terraformersmc.com/releases/" }
+    mavenCentral()
 }
 
 processResources {
@@ -47,17 +50,23 @@ tasks.withType(JavaCompile).configureEach {
 	// The Minecraft launcher currently installs Java 8 for users, so your mod probably wants to target Java 8 too
 	// JDK 9 introduced a new way of specifying this that will make sure no newer classes or methods are used.
 	// We'll use that if it's available, but otherwise we'll use the older option.
-	def targetVersion = 8
+/*	def targetVersion = 8
 	if (JavaVersion.current().isJava9Compatible()) {
 		 it.options.release = targetVersion
-	}
+	}*/
 }
 
 java {
-	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
+    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
 	// if it is present.
 	// If you remove this line, sources will not be generated.
 	withSourcesJar()
+}
+
+processResources {
+    filesMatching("fabric.mod.json") {
+        expand "version": project.version
+    }
 }
 
 jar {
